<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Musical Structure App</string>

    <!-- Category name for songs [CHAR LIMIT=20] -->
    <string name="category_songs">Songs</string>

    <!-- Category name for now playing [CHAR LIMIT=20] -->
    <string name="category_now_playing">Now Playing</string>

    <!-- Strings used in activity_main -->
    <string name="banner_main_activity">When words fail, music speaks</string>
    <string name="main_screen_image">Main screen image</string>

    <!-- Strings used in list_item.xml -->
    <string name="list_item_play_button_image">List item play button image</string>

    <!-- Strings used in list_item.xml and now_playing_info.xml.-->
    <string name="song">song</string>
    <string name="artist">artist</string>

    <!-- Strings used in now_playing_info.xml.-->
    <string name="album_dummy_image">Album dummy image</string>
    <string name="song_playing_time_start_0_00">0:00</string>
    <string name="song_playing_time_max">7:20</string>
    <string name="suffle_image_button">Suffle Image Button</string>
    <string name="skip_previous_image_button">Skip previous image button</string>
    <string name="play_image_button">Play image button</string>
    <string name="skip_next_image_button">Skip next image button</string>
    <string name="replay_image_button">Replay image button</string>

    <!-- Strings used in NowPlayingActivity.java.-->
    <string name="choose_song_text_view">Choose a song from the list</string>
    <string name="song_name1">How high the Moon</string>
    <string name="artist_name1">Les Paul</string>
    <string name="song_name2">Stone Crazy</string>
    <string name="song_name3">Pretty Woman</string>
    <string name="song_name4">Purple Haze</string>
    <string name="song_name5">Black Magic Woman</string>
    <string name="song_name6">Sultans Of Swing</string>
    <string name="song_name7">La Grange</string>
    <string name="song_name8">Solo from \'Can\'t You Hear Me Knocking\'</string>
    <string name="song_name9">Riding With The King</string>
    <string name="song_name10">Born Under A Bad Sign</string>
    <string name="song_name11">Cold Shot</string>
    <string name="song_name12">A Day In The Life</string>
    <string name="song_name13">Smoke on the water</string>
    <string name="song_name14">Comfortably Numb</string>
    <string name="song_name15">Shine On You Crazy Diamond</string>
    <string name="artist_name2">Buddy Guy</string>
    <string name="artist_name3"><![CDATA[Roy Orbison, Bruce Springsteen & James Burton]]></string>
    <string name="artist_name4">Jimi Hendrix</string>
    <string name="artist_name5">Carlos Santana</string>
    <string name="artist_name6">Dire Straits</string>
    <string name="artist_name7">ZZ Top</string>
    <string name="artist_name8">Mick Taylor</string>
    <string name="artist_name9"><![CDATA[B.B. King & Eric Clapton]]></string>
    <string name="artist_name10">Albert King</string>
    <string name="artist_name11">Stevie Ray Vaughan</string>
    <string name="artist_name12">Jeff Beck</string>
    <string name="artist_name13">Ritchie Blackmore</string>
    <string name="artist_name14">David Gilmour</string>
    <string name="artist_name15">David Gilmour</string>
</resources>
