<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/play"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        android:contentDescription="@string/list_item_play_button_image"
        android:paddingEnd="@dimen/activity_horizontal_margin" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/song_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/songs_name_and_seek_bar"
            tools:text="@string/song" />

        <TextView
            android:id="@+id/artist_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/artist"
            android:textAllCaps="true"/>

    </LinearLayout>


</LinearLayout>